# fpapp

./: .eslintignore  .eslintrc  .gitignore  .prettierrc  Cargo.toml  README.md  babel.config.js  dataSimple.json  electron-builder.yml  fp_data - Copy.json  fp_data.json  gulpfile.js  index.html  out.txt  package-lock.json  package.json  postcss.config.js  rollup.config.js  tailwind.config.js  tailwind_colors_graphics.ts  vite.config.ts  webpack.config.base.js  webpack.config.main.prod.js  webpack.config.renderer.dev.dll.js  webpack.config.renderer.dev.js  webpack.config.renderer.prod.js
app/: README.md  Routes.js  app.global.css  app.html  app.icns  background.html  main.dev.js  menu.js  package.json
app/actions/: file.js
app/background/: README.md  accountComputation.js  index.js
app/components/: Counter.js  FileTest.js  Home.js
app/constants/: routes.json
app/containers/: App.js  CounterPage.js  FileTestPage.js  HomePage.js  Root.js
app/main/: index.js  menu.js
app/reducers/: file.js  index.js
app/renderer/: README.md  app.js  index.html  index.js  root.jsx  routes.js
app/renderer/actions/: app.js  data.js  file.js  results.js
app/renderer/components/: Counter.js  FileTest.js  InjectIcon.jsx  account.js  account.jsx  accountStructure.js  autofillTypeOptions.js  customToolTip.jsx  floatingActionButton.js  floatingActionButton.jsx  muiEditableTable.js  muiEditableTable.jsx  numberFormaters.js  numberFormaters.jsx  suggestedInput.js  suggestedInput.jsx
app/renderer/constants/: README.md  accountStructure.js  autofillTypeOptions.js  suggestions.js
app/renderer/containers/: AppRoute.js  dashboard.js  menuItems.js
app/renderer/reducers/: app.js  data.js  file.js  index.js  results.js
app/renderer/routes/: index.jsx
app/renderer/store/: configureStore.dev.js  configureStore.js  configureStore.prod.js
app/renderer/utils/: index.js
app/store/: configureStore.dev.js
old_js/app/: README.md
old_js/app/background/: README.md  background.js  fpcalc.py  index.html
old_js/app/main/: README.md  menu.js
old_js/app/renderer/: store.js
public/: index.html
rust_background/: Cargo.toml
rust_background/src/: config.rs  main.rs
rust_background/src/accounts/: Cargo.toml
rust_background/src/accounts/src/: income.rs  loan.rs  mortgage.rs  plot.rs
rust_background/src/accounts/src/account_savings_derive/src/: lib.rs
rust_background/src/accounts/src/inputs/: settings.rs
src/: App.svelte  accountDefaults.ts  account_types.rs  analysis_types.rs  config.rs  helper.ts  inputs.rs  main.rs  main.ts  plot.rs  settings.rs  stores.js  stores.ts
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: default_config.toml  logconfig.rs  main.rs  menu.rs
src-tauri/src/accounts/: Cargo.toml
src-tauri/src/accounts/bindings/: AccountWrapper.ts  AccountWrapperUI.ts  College.ts  ContributionOptions.ts  EmployerMatch.ts  Expense.ts  ExpenseOptions.ts  Hsa.ts  Income.ts  Loan.ts  Mortgage.ts  PaymentOptions.ts  PercentInput.ts  PercentSuggestions.ts  Retirement.ts  Savings.ts  Settings.ts  Span.ts  Ssa.ts  SsaSettings.ts  Table.ts  TaxStatus.ts  UserData.ts  WithdrawalOptions.ts  YearComputation.ts  YearEvalType.ts  YearInput.ts  YearSuggestion.ts
src-tauri/src/accounts/src/: college.rs  expense.rs  hsa.rs  income.rs  lib.rs  loan.rs  mortgage.rs  plot.rs  retirement.rs  savings.rs  ssa.rs
src-tauri/src/accounts/src/account_savings_derive/src/: lib.rs
src-tauri/src/accounts/src/inputs/: contribution.rs  expense.rs  mod.rs  payment.rs  percent.rs  settings.rs  withdrawal.rs  year.rs
src-tauri/src/accounts/src/simulation/: mod.rs  table.rs  table_groups.rs  totals.rs
src/account_types/: college.rs  expense.rs  hsa.rs  income.rs  inputs.rs  loan.rs  mod.rs  mortgage.rs  retirement.rs  savings.rs  ssa.rs
src/accounts/: Cargo.toml  college.rs  expense.rs  hsa.rs  income.rs  loan.rs  mod.rs  mortgage.rs  plotting.rs  retirement.rs  savings.rs  ssa.rs  tables.rs
src/accounts/src/: college.rs  expense.rs  hsa.rs  income.rs  lib.rs  loan.rs  mortgage.rs  plot.rs  retirement.rs  savings.rs  ssa.rs
src/accounts/types/: college.rs  expense.rs  hsa.rs  income.rs  loan.rs  mod.rs  mortgage.rs  retirement.rs  savings.rs  ssa.rs
src/accounts/withdrawal/: Cargo.toml
src/components/: AccountCard.svelte  AccountLink.svelte  CollegeForm.svelte  Contribution.svelte  DeleteModal.svelte  EmployerMatch.svelte  Expense.svelte  Line.svelte  Modal.svelte  NumberInput.svelte  Payment.svelte  PercentInput.svelte  QuestionField.svelte  QuestionHelper.svelte  Scatter copy.svelte  Scatter.svelte  Table.svelte  TaxStatus.svelte  TextAreaInput.svelte  TextInput.svelte  Withdrawal.svelte  YearInput.svelte
src/components/Charts/: Box.svelte  DbScanScatter.svelte  Event.svelte  Histogram.svelte  Line.svelte  Scatter.svelte  (+8 more)
src/icons/: AddAlt.svelte  ChevronDown.svelte  ChevronUp.svelte  Question.svelte  SubtractAlt.svelte
src/inputs/: contribution.rs  expense.rs  input_options.rs  mod.rs  payment.rs  percent.rs  settings.rs  withdrawal.rs  year.rs
src/pages/: College.svelte  Dashboard.svelte  Expenses.svelte  Hsa.svelte  Income.svelte  Loan.svelte  Mortgage.svelte  Retirement.svelte  Savings.svelte  Settings.svelte  Ssa.svelte  _layout.svelte  index.svelte
src/simulation/: mod.rs  table.rs  table_groups.rs  totals.rs
tasks/: assets.js  hotreload.js  watch.js
ui/: college_page.60  common.60  dashboard_page.60  expenses_page.60  graphs_page.60  hsa_page.60  income_page.60  iot-dashboard.60  loan_page.60  main.60  mortgage_page.60  retirement_page.60  savings_page.60  settings_page.60  ssa_page.60
(+43 files in other folders)
