[package]
name = "fpapp"
version = "0.1.0"
edition = "2021"
build = "build.rs"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9.0"
image = "0.23.14"
log = "0.4.14"
plotters = "0.3.1"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
sixtyfps = "0.1.5"
toml = "0.5.8"

accounts = { path = "./src/accounts" }

[build-dependencies]
sixtyfps-build = "0.1.5"
