[package]
name = "fpapp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9.0"
log = "0.4.14"
plotters = "0.3.1"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
toml = "0.5.8"
iced = "0.3"

accounts = { path = "./src/accounts" }
