[package]
name = "fpapp"
version = "0.1.0"
description = "fp app"
authors = ["you"]
license = ""
repository = ""
default-run = "fpapp"
edition = "2021"
# edition = "2018"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.0-rc.8", features = [] }

[dependencies]
env_logger = "0.9.0"
image = "0.23.14"
log = "0.4.17"
plotters = "0.3.1"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
tauri = { version = "1.0.0-rc.10", features = ["api-all"] }
toml = "0.5.9"

accounts = { path = "./src/accounts" }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
incremental = false
opt-level = "s"
