[package]
name = "fpapp"
version = "3.0.0"
description = "fp app"
authors = ["Phil Spindler"]
license = ""
repository = ""
default-run = "fpapp"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2.1", features = [] }

[dependencies]
flexi_logger = "0.24.2"
image = "0.24.5"
log = "0.4.17"
plotters = "0.3.4"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
tauri = { version = "1.2.4", features = ["api-all"] }
toml = "0.5.11"

accounts = { path = "./src/accounts" }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
incremental = false
opt-level = "s"
